# tech-challenge-modulo-2

./: Dockerfile  README.md  create_tables.sql  docker-compose.yml  example.env  pyproject.toml
deploy/: tech-challenge-app-service.yaml  tech-challenge-db-deployment.yaml  tech-challenge-db-persistent-volume-claim.yaml  tech-challenge-db-persistent-volume.yaml  tech-challenge-db-service.yaml  tech-challenge-db-storage-class.yaml
kubernetes/: tech-challenge-app-config.yaml  tech-challenge-app-deployment.yaml  tech-challenge-app-secret.yaml  tech-challenge-db-storage-class.yaml  tech-challenge-secret.yaml
src/: app.py
src/adapters/: customer_json_adapter.py  order_json_adapter.py  product_json_adapter.py
src/api/: customer_api.py  order_api.py  product_api.py
src/api/endpoints/: customer_api.py  health_api.py  order_api.py  product_api.py
src/api/errors/: api_errors.py
src/config/: config.py  errors.py
src/controllers/: customer_controller.py  order_controller.py  product_controller.py
src/entities/errors/: customer_error.py  order_error.py  order_item_error.py  product_error.py
src/entities/models/: customer_entity.py  order_entity.py  order_item_entity.py  product_entity.py
src/entities/schemas/: customer_dto.py  order_dto.py  product_dto.py
src/gateways/orm/: customer_orm.py  order_orm.py  product_orm.py
src/gateways/postgres_gateways/: customer_gateway.py  order_gateway.py  product_gateway.py
src/interfaces/gateways/: customer_gateway_interface.py  (+2 more)
src/usecases/: customer_usecase.py  order_usecase.py  product_usecase.py
src/utils/: utils.py
(+3 files in other folders)
