[tool.poetry]
name = "tech-challenge-modulo-2"
version = "0.1.0"
description = ""
authors = ["Rafael <rafaelpfer@hotmail.com>"]
readme = "README.md"
packages = [{include = "tech_challenge_modulo_2"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.103.0"
sqlalchemy = "2.0.20"
python-dotenv = "^1.0.0"
kink = "^0.6.6"
uvicorn = "0.23.2"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "2.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"